crates/aura-app/tests/ui/semantic_postcondition_proof_private.rs
fn main() {
    let _ = aura_app::ui::workflows::semantic_facts::ChannelMembershipReadyProof;
}
